Updated Ansible Galaxy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -27,3 +27,10 @@ collections_paths = ./collections
 [persistent_connection]
 command_timeout = 200
 connect_timeout = 200
+
+[galaxy]
+
+server_list = release_galaxy
+
+[galaxy_server.release_galaxy]
+url=https://galaxy.ansible.com/
