--- a/lambda_function.yml
+++ b/lambda_function.yml
@@ -11,7 +11,7 @@
 
     - name: Get Current Time from Lambda
       ansible.builtin.uri:
-        url: "https://{{ url-prefix }}.execute-api.us-east-1.amazonaws.com/dev/ping"
+        url: "https://{{ url_prefix }}.execute-api.us-east-1.amazonaws.com/dev/ping"
       register: time_output
 
     - name: Print out the current time
