--- a/lambda_function.yml
+++ b/lambda_function.yml
@@ -16,4 +16,4 @@
 
     - name: Print out the current time
       ansible.builtin.debug:
-        var: time_output
+        var: time_output.json.message
