--- a/serverless_ansibletowerapitemplate.yml
+++ b/serverless_ansibletowerapitemplate.yml
@@ -13,5 +13,5 @@
     - name: Serverless: Programmatically Call Ansible Tower
       ansible.builtin.uri:
         url: "{{ ansibletowerapitemplate_url }}"
-        headers:
-          x-api-key:"{{ lambda_api_key }}"
+        # headers:
+        #   x-api-key:"{{ lambda_api_key }}"
