--- a/serverless_ansibletowerapitemplate.yml
+++ b/serverless_ansibletowerapitemplate.yml
@@ -10,8 +10,11 @@
 
   tasks:
 
-  - name: Serverless: Programmatically Call Ansible Tower
-    ansible.builtin.uri:
-      url: "{{ ansibletowerapitemplate_url }}"
-      # headers:
-        #   x-api-key:"{{ lambda_api_key }}"
+  - debug:
+      msg: "Hello World!"
+
+  # - name: Serverless: Programmatically Call Ansible Tower
+  #   ansible.builtin.uri:
+  #     url: "{{ ansibletowerapitemplate_url }}"
+  #     # headers:
+  #       #   x-api-key:"{{ lambda_api_key }}"
