--- a/serverless_ansibletowerapitemplate.yml
+++ b/serverless_ansibletowerapitemplate.yml
@@ -13,8 +13,8 @@
   - debug:
       msg: "Hello World!"
 
-  # - name: Serverless: Programmatically Call Ansible Tower
-  #   ansible.builtin.uri:
-  #     url: "{{ ansibletowerapitemplate_url }}"
-  #     # headers:
-  #       #   x-api-key:"{{ lambda_api_key }}"
+  - name: Serverless: Programmatically Call Ansible Tower
+    ansible.builtin.uri:
+      url: "{{ ansibletowerapitemplate_url }}"
+      # headers:
+        #   x-api-key:"{{ lambda_api_key }}"
