--- a/serverless_ansibletowerapitemplate.yml
+++ b/serverless_ansibletowerapitemplate.yml
@@ -10,11 +10,14 @@
 
   tasks:
 
-  - debug:
-      msg: "Hello World!"
-
   - name: "Serverless: Programmatically Call Ansible Tower"
     ansible.builtin.uri:
       url: "{{ ansibletowerapitemplate_url }}"
       headers:
           x-api-key: "{{ lambda_api_key }}"
+    no_log: true
+    register: ansibletowerapitemplate_output
+
+  - name: Print out success code
+    debug:
+      var: ansibletowerapitemplate_output
