--- a/serverless_ec2_deploy.yml
+++ b/serverless_ec2_deploy.yml
@@ -12,7 +12,7 @@
 
     - name: Deploy Cloud Resources via Serverless function
       ansible.builtin.uri:
-        url: "{{ ansible_tower_deploy_ec2_url }}?vpc_name={{vpc_prefix}}&num_instances={{num_instances}}"
+        url: "{{ ansible_tower_deploy_ec2_url }}?vpc_name={{vpc_prefix}}&num_instances={{num_of_instances}}"
         method: POST
         headers:
           x-api-key: "{{ lambda_manage_cloud_api_key }}"
