changed the output message

--- a/serverless_ec2_deploy.yml
+++ b/serverless_ec2_deploy.yml
@@ -20,4 +20,4 @@
 
     - name: Print out the results
       ansible.builtin.debug:
-        var: the_output.json
+        var: the_output.json.body
